--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"target": "es6",
 		"strict": true,
 		"noLib": true,
+		"stripInternal": true,
 		"downlevelIteration": true,
 		"declaration": true,
 		"typeRoots": ["rbx-types"]
