--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
-{
-  "name": "rbx-net",
-  "version": "0.4.6",
-  "description": "Networking Library for roblox-ts",
-  "main": "./out/init.lua",
-  "typings": "./out/index.d.ts",
-  "scripts": {},
-  "author": "vorlias",
-  "license": "MIT",
-  "devDependencies": {
-    "rbx-types": "^1.0.83"
-  },
-  "peerDependencies": {
-    "rbx-types": "^1.0.65"
-  },
-  "dependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Vorlias/rbx-net.git"
-  },
-  "keywords": [
-    "roblox",
-    "typescript",
-    "networking"
-  ],
-  "bugs": {
-    "url": "https://github.com/Vorlias/rbx-net/issues"
-  },
-  "homepage": "https://github.com/Vorlias/rbx-net#readme"
-}
+	{
+	"name": "rbx-net",
+	"version": "0.4.7",
+	"description": "Networking Library for roblox-ts",
+	"main": "./out/init.lua",
+	"typings": "./out/index.d.ts",
+	"scripts": {
+		"prepublish": "rbxtsc"
+	},
+	"author": "vorlias",
+	"license": "MIT",
+	"devDependencies": {
+	"rbx-types": "^1.0.83"
+	},
+	"peerDependencies": {
+	"rbx-types": "^1.0.65"
+	},
+	"dependencies": {},
+	"repository": {
+	"type": "git",
+	"url": "git+https://github.com/Vorlias/rbx-net.git"
+	},
+	"keywords": [
+	"roblox",
+	"typescript",
+	"networking"
+	],
+	"bugs": {
+	"url": "https://github.com/Vorlias/rbx-net/issues"
+	},
+	"homepage": "https://github.com/Vorlias/rbx-net#readme"
+	}
