Remove _exports hack

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
 		"stripInternal": true,
 		"downlevelIteration": true,
 		"declaration": true,
-		"typeRoots": ["rbx-types"]
+		"types": ["rbx-types"]
 	},
 	"typeAcquisition": {
 		"enable": true
