--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 		"stripInternal": true,
 		"downlevelIteration": true,
 		"declaration": true,
+		"allowSyntheticDefaultImports": true,
 		"types": ["rbx-types"]
 	},
 	"typeAcquisition": {
