--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rbx-net",
-	"version": "0.6.0",
+	"version": "0.7.0-alpha.0",
 	"description": "Networking Library for roblox-ts",
 	"main": "./out/init.lua",
 	"typings": "./out/index.d.ts",
