--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "rbx-net",
-	"version": "1.0.0-alpha.5",
+	"name": "@rbxts/net",
+	"version": "1.0.0",
+	"private": false,
 	"description": "Networking Library for roblox-ts",
 	"main": "./out/init.lua",
 	"typings": "./out/index.d.ts",
 	"scripts": {
 		"test": "rbxtsc && lua ./out/Test/spec.lua",
-		"prepublish": "npm run build",
 		"cleanup": "rm -rf ./out && rm -rf ./dist",
 		"declaration-fixes": "sh declarationfix.sh",
 		"build": "npm run cleanup && rbxtsc && npm run declaration-fixes",
@@ -16,7 +16,7 @@
 	"author": "vorlias",
 	"license": "MIT",
 	"devDependencies": {
-		"rbx-types": "^1.0.152"
+		"@rbxts/types": "^1.0.192"
 	},
 	"dependencies": {},
 	"repository": {
