Heaps of changes for 0.1.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
 
 		"paths": {
 			"*": ["../node_modules/@rbxts/*"],
+			"net.GUIDCache": ["../src/GuidCache"],
+			"net.Throttle": ["../src/Throttle"],
+			"net.Serializer": ["../src/Serializer"]
 		}
 	}
 }
