--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
 	"compilerOptions": {
 		// required
 		"allowSyntheticDefaultImports": true,
-		"isolatedModules": true,
 		"downlevelIteration": true,
 		"module": "commonjs",
 		"noLib": true,
@@ -16,7 +15,7 @@
 
 		// optional
 		"baseUrl": "src",
-		"declaration": false,
+		"declaration": true,
 
 		// optional, non-configurable
 		"jsx": "react",
