export default Net is now export = Net

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@rbxts/net",
-	"version": "1.0.2",
+	"version": "1.0.3-beta",
 	"private": false,
 	"description": "Networking Library for roblox-ts",
 	"main": "./out/init.lua",
@@ -8,10 +8,7 @@
 	"scripts": {
 		"test": "rbxtsc && lua ./out/Test/spec.lua",
 		"cleanup": "rm -rf ./out && rm -rf ./dist",
-		"declaration-fixes": "sh declarationfix.sh",
-		"build": "npm run cleanup && rbxtsc && npm run declaration-fixes",
-		"buildrbxm": "npm run cleanup && rbxtsc && npm run rbxm",
-		"rbxm": "mkdir -p ./dist && rojo build --output ./dist/rbx-net.rbxm ./lua.project.json"
+		"build": "npm run cleanup && rbxtsc"
 	},
 	"author": "vorlias",
 	"license": "MIT",
