--- a/rotriever.toml
+++ b/rotriever.toml
@@ -1,5 +1,6 @@
 name = "rbx-net"
 author = "Vorlias"
 license = ""
-content_root = "dist/lua"
-version = "1.0.13"
+content_root = ""
+version = "1.1.0"
+rev = "lualib"
