--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"cleanup": "rm -rf ./out && rm -rf ./dist",
 		"build": "npm run cleanup && rbxtsc",
 		"binary": "mkdir -p dist && rbxtsc -r luaproject.json && rojo build luaproject.json --output dist/net.rbxmx",
-		"publish:alpha": "rbxtsc && npm publish --tag alpha"
+		"publish:alpha": "rbxtsc && npm publish --tag alpha",
 		"luadist": "./build.sh -l && gh-pages -d lualib -b lualib"
 	},
 	"author": "vorlias",
