--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
         - Install for Lua: lua-install.md
     - Guide:
         - Events: events.md
+        - Type Safety: type-safety.md
     - API Reference:
       - Net namespace: api-reference.md
       - Server Classes:
