Refactoring for new beta

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 		// required
 		"allowSyntheticDefaultImports": true,
 		"downlevelIteration": true,
+		"moduleResolution": "Node",
 		"module": "commonjs",
 		"noLib": true,
 		"strict": true,
