--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
 	"name": "@rbxts/net",
-	"version": "1.3.0-beta",
+	"version": "1.3.0-beta.6.2",
 	"private": false,
 	"description": "Networking Library for roblox-ts",
 	"main": "./out/init.lua",
 	"typings": "./out/index.d.ts",
+	"publishConfig": {
+		"tag": "beta",
+		"access": "public"
+	},
 	"scripts": {
 		"prepare": "rbxtsc",
 		"test": "rbxtsc && lua ./out/Test/spec.lua",
@@ -18,15 +22,16 @@
 	"author": "vorlias",
 	"license": "MIT",
 	"devDependencies": {
-		"@rbxts/types": "^1.0.353",
-		"gh-pages": "^2.2.0",
+		"@rbxts/compiler-types": "^1.0.0-beta.6.2",
+		"@rbxts/types": "^1.0.428",
+		"@typescript-eslint/eslint-plugin": "^3.3.0",
+		"@typescript-eslint/parser": "^3.3.0",
 		"eslint": "^7.2.0",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-plugin-prettier": "^3.1.4",
 		"eslint-plugin-roblox-ts": "0.0.15",
-		"prettier": "^2.0.5",
-		"@typescript-eslint/eslint-plugin": "^3.3.0",
-		"@typescript-eslint/parser": "^3.3.0"
+		"gh-pages": "^2.2.0",
+		"prettier": "^2.0.5"
 	},
 	"dependencies": {},
 	"repository": {
