--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,12 @@
 		"rootDir": "src",
 		"outDir": "out",
 		"baseUrl": "src",
-		"incremental": true,
-		"tsBuildInfoFile": "out/tsconfig.tsbuildinfo",
+		//"incremental": true,
+		//"tsBuildInfoFile": "out/tsconfig.tsbuildinfo",
 		"declaration": true
-	}
+	},
+	"exclude": [
+		"example/**/*",
+		"out"
+	]
 }
