--- a/example/default.project.json
+++ b/example/default.project.json
@@ -18,7 +18,8 @@
                         "$path": "build/src"
                     }
                 }
-            }
+            },
+            "Shared": {"$path": "build/example/shared"}
         },
         "StarterPlayer": {
             "$className": "StarterPlayer",
