--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -28,7 +28,12 @@
             "@rbxts/net/*": ["../src/*"]
         },
         "jsx": "react",
-        "jsxFactory": "Roact.createElement"
+        "jsxFactory": "Roact.createElement",
+        "plugins": [
+            {
+                "transform": "rbxts-transform-env"
+            }
+        ]
     },
     "include": [
         "**/*",
