--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-roblox-ts": "0.0.24",
     "prettier": "^2.2.1",
+    "rbxts-transform-debug": "^0.1.0",
+    "rbxts-transform-env": "^0.3.0",
     "typescript": "^4.1.2"
   },
-  "dependencies": {
-    "rbxts-transform-env": "^0.2.3"
-  }
+  "dependencies": {}
 }
