--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -32,7 +32,10 @@
         "plugins": [
             {
                 "transform": "rbxts-transform-env"
-            }
+            },
+            {
+				"transform": "rbxts-transform-debug"
+			}
         ]
     },
     "include": [
