--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@rbxts/net",
-  "version": "2.0.0-alpha.7",
+  "version": "2.0.0-rc.0",
   "description": "",
   "main": "out/init.lua",
   "scripts": {
     "prepare": "npm run build",
     "build": "cross-env NODE_ENV=production TYPE=ts rbxtsc --verbose",
+    "build:luau": "cross-env NODE_ENV=production TYPE=luau rbxtsc --verbose --type=model --rojo=\"luau/default.project.json\"",
     "build:docs": "cd docs && npm run build",
     "build:dev": "cross-env NODE_ENV=development TYPE=ts rbxtsc --verbose",
+    "luau": "npm run build:luau && rojo build luau.project.json -o luau.net.rbxmx",
     "build:example": "cross-env NODE_ENV=development TYPE=ts rbxtsc-dev --type=game -p ./example -i ./include",
     "watch:example": "cross-env NODE_ENV=development TYPE=ts rbxtsc-dev -w --type=game -p ./example -i ./include",
     "serve:example": "rojo serve ./example/default.project.json --port 34567"
@@ -25,7 +27,7 @@
   "homepage": "https://github.com/roblox-aurora/rbx-net#readme",
   "publishConfig": {
     "access": "public",
-    "tag": "alpha"
+    "tag": "next"
   },
   "types": "out/index.d.ts",
   "devDependencies": {
