--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "out/init.lua",
   "scripts": {
     "prepare": "npm run build",
-    "build": "cross-env NODE_ENV=production TYPE=ts rbxtsc --verbose",
-    "build:luau": "cross-env NODE_ENV=production TYPE=luau rbxtsc --verbose --type=model --rojo=\"luau/default.project.json\"",
+    "build": "cross-env NODE_ENV=production rbxtsc --verbose",
+    "build:luau": "cross-env NODE_ENV=production TYPE=Luau rbxtsc --verbose --type=model --rojo=\"luau/default.project.json\"",
     "build:docs": "cd docs && npm run build",
-    "build:dev": "cross-env NODE_ENV=development TYPE=ts rbxtsc --verbose",
+    "build:dev": "cross-env NODE_ENV=development rbxtsc --verbose",
     "luau": "npm run build:luau && rojo build luau.project.json -o luau.net.rbxmx",
-    "build:example": "cross-env NODE_ENV=development TYPE=ts rbxtsc-dev --type=game -p ./example -i ./include",
-    "watch:example": "cross-env NODE_ENV=development TYPE=ts rbxtsc-dev -w --type=game -p ./example -i ./include",
+    "build:example": "cross-env NODE_ENV=development rbxtsc-dev --type=game -p ./example -i ./include",
+    "watch:example": "cross-env NODE_ENV=development rbxtsc-dev -w --type=game -p ./example -i ./include",
     "serve:example": "rojo serve ./example/default.project.json --port 34567"
   },
   "repository": {
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/roblox-aurora/rbx-net#readme",
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "beta"
   },
   "types": "out/index.d.ts",
   "devDependencies": {
