--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:luau": "cross-env NODE_ENV=production TYPE=Luau rbxtsc --verbose --type=model --rojo=\"luau/default.project.json\"",
     "build:docs": "cd docs && npm run build",
     "build:dev": "cross-env NODE_ENV=development rbxtsc --verbose",
-    "luau": "npm run build:luau && rojo build luau.project.json -o luau.net.rbxmx",
+    "build:rbxmx": "npm run build:luau && rojo build luau/default.project.json -o luau.net.rbxmx",
     "build:example": "cross-env NODE_ENV=development rbxtsc-dev --type=game -p ./example -i ./include",
     "watch:example": "cross-env NODE_ENV=development rbxtsc-dev -w --type=game -p ./example -i ./include",
     "serve:example": "rojo serve ./example/default.project.json --port 34567"
