--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/net",
-  "version": "2.0.0-rc.0",
+  "version": "2.0.0-rc.1",
   "description": "",
   "main": "out/init.lua",
   "scripts": {
@@ -12,7 +12,7 @@
     "build:dev": "cross-env NODE_ENV=development rbxtsc --verbose",
     "build:rbxmx": "npm run build:luau && rojo build luau/build.project.json -o luau.net.rbxmx",
     "build:example": "cross-env NODE_ENV=development rbxtsc-dev --type=game -p ./example -i ./include",
-    "watch:example": "cross-env NODE_ENV=development rbxtsc-dev -w --type=game -p ./example -i ./include",
+    "watch:example": "cross-env NODE_ENV=development TYPE=TestTS rbxtsc-dev -w --type=game -p ./example -i ./include",
     "serve:example": "rojo serve ./example/default.project.json --port 34567"
   },
   "repository": {
