--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@docusaurus/core": "2.0.0-alpha.70",
     "@docusaurus/preset-classic": "2.0.0-alpha.70",
+    "@mdi/js": "^5.9.55",
+    "@mdi/react": "^1.4.0",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
     "react": "^16.8.4",
