--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/net",
-  "version": "2.0.0-rc.4",
+  "version": "2.0.0",
   "description": "",
   "main": "out/init.lua",
   "scripts": {
@@ -27,8 +27,7 @@
   },
   "homepage": "https://github.com/roblox-aurora/rbx-net#readme",
   "publishConfig": {
-    "access": "public",
-    "tag": "beta"
+    "access": "public"
   },
   "types": "out/index.d.ts",
   "devDependencies": {
