--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -34,7 +34,8 @@
                 "transform": "rbxts-transform-env"
             },
             {
-				"transform": "rbxts-transform-debug"
+                "transform": "rbxts-transform-debug",
+                "verbose": true
 			}
         ]
     },
