--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
 			{
 				"transform": "rbxts-transform-env"
 			}, {
-				"transform": "rbxts-transform-debug"
+				"transform": "rbxts-transform-debug",
+				"enabled": false
 			}
 		]
 	},
