--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "homepage": "https://github.com/roblox-aurora/rbx-net#readme",
   "types": "out/index.d.ts",
   "devDependencies": {
-    "@rbxts/compiler-types": "^1.0.0-beta.16.1",
+    "@rbxts/compiler-types": "^1.1.1-types.3",
     "@rbxts/t": "^1.3.5",
-    "@rbxts/types": "^1.0.435",
+    "@rbxts/types": "^1.0.471",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "concurrently": "^6.0.0",
