--- a/foreman.toml
+++ b/foreman.toml
@@ -1,2 +1,2 @@
 [tools]
-rojo = { source = "rojo-rbx/rojo", version = "6.0.0-rc.4" }
+rojo = { source = "rojo-rbx/rojo", version = "7.0.0-alpha.4" }
