--- a/foreman.toml
+++ b/foreman.toml
@@ -1,2 +1,3 @@
 [tools]
-rojo = { source = "rojo-rbx/rojo", version = "6.0.0-rc.4" }
+rojo = { source = "rojo-rbx/rojo", version = "=7.0.0-rc.1" }
+wally = { source = "UpliftGames/wally", version = "=0.3.0" }
