--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-roblox-ts": "0.0.24",
     "prettier": "^2.2.1",
-    "rbxts-transform-debug": "^0.4.0",
-    "rbxts-transform-env": "^0.3.0",
-    "typescript": "^4.1.2"
-  },
-  "dependencies": {}
+    "rbxts-transform-debug": "1.0.0-ts4.4",
+    "rbxts-transform-env": "1.0.0-ts4.4",
+    "roblox-ts": "^1.2.7",
+    "typescript": "^4.4.4"
+  }
 }
