--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,10 @@
 				"transform": "rbxts-transform-env"
 			}, {
 				"transform": "rbxts-transform-debug",
-				"enabled": false
+				"enabled": true,
+				"environmentRequires": {
+					"NODE_ENV": "development"
+				}
 			}
 		]
 	},
