--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/net",
-  "version": "2.2.0",
+  "version": "2.2.0-beta.0",
   "description": "",
   "main": "out/init.lua",
   "scripts": {
@@ -16,6 +16,10 @@
     "watch:example": "cross-env NODE_ENV=development TYPE=TestTS rbxtsc-dev -w --type=game -p ./example -i ./include",
     "serve:example": "rojo serve ./example/default.project.json --port 34567",
     "dev:example": "concurrently npm:watch:example npm:serve:example"
+  },
+
+  "publishConfig": {
+    "tag": "beta"
   },
   "repository": {
     "type": "git",
