--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/net",
-  "version": "3.0.0-alpha.1",
+  "version": "3.0.0-beta.3",
   "description": "",
   "main": "out/init.lua",
   "scripts": {
@@ -19,7 +19,7 @@
   },
 
   "publishConfig": {
-    "tag": "alpha"
+    "tag": "beta"
   },
   "repository": {
     "type": "git",
