[BREAKING] v3.0 - configuration changes & official messaging API (#60)
* Automatically generate server-side remotes

* Namespaces now auto-generate as well.

* Generate namespaced ids correctly

* Doc updates

* Update net-definitions.md

* More doc updates

* A few more changes

* Swap out the generation code to a separate function

* Fixes for default listener calls

Should throw if you attempt to call empty listeners w/ functions or async functions

* Adding new helper types

* Update index.ts

* Add assertion for invalid namespaces

* Bug fix for namespaced remotes

* Namespacing documentation

* Version prop changes

* Deprecate old API

* we're now beta

* Move consts, remove old debugging stuff

* Update README.md

* Update README.md

* Initial work on 3.0

* Remove ye olde API

* Fix MessagingEvent

* Add option to not yield on get

Some games rely on this behaviour

* Fix definitions

* Omit 'ClientGetShouldYield'

* Make 'configuration' optional in create.

* Add 'Net.CreateDefinitions'

* Don't strip comments

* Add MessagingEvent/ServerToServerEvent

* Fix declarations

* Add messaging

* Simplify Get

* ServerToServer -> Experience

I think that makes more sense?

* Update README.md

* Updated docs to 3.0

* Added doc blog post

* Add replicating messaging API

* More work on the experimental replicating API

* Fixes

* Update README.md

* Improved script sig behaviour

* Namespace fixes

* Updated docs

* Return the connection on 'OnEvent'

* Promote to 3.0.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/net",
-  "version": "2.1.5",
+  "version": "3.0.0",
   "description": "",
   "main": "out/init.lua",
   "scripts": {
@@ -10,6 +10,7 @@
     "build:docs": "cd docs && npm run build",
     "start:docs": "cd docs && yarn start",
     "build:dev": "cross-env NODE_ENV=development rbxtsc --verbose",
+    "watch:dev": "cross-env NODE_ENV=development rbxtsc -w --verbose",
     "build:rbxmx": "npm run build:luau && rojo build luau/build.project.json -o luau.net.rbxmx",
     "build:example": "cross-env NODE_ENV=development rbxtsc-dev --type=game -p ./example -i ./include",
     "watch:example": "cross-env NODE_ENV=development TYPE=TestTS rbxtsc-dev -w --type=game -p ./example -i ./include",
