--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@rbxts/net",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "",
   "main": "out/init.lua",
   "scripts": {
     "prepare": "npm run build",
+    "yalc": "npm run build && yalc push",
     "build": "cross-env NODE_ENV=production rbxtsc --verbose",
     "build:luau": "cross-env NODE_ENV=production TYPE=Luau rbxtsc --verbose --type=model --rojo=\"luau/build.project.json\"",
     "build:docs": "cd docs && npm run build",
