Runtime hashing test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,8 @@
 				"singleQuote": false,
 				"printWidth": 120,
 				"tabWidth": 4,
-				"useTabs": true
+				"useTabs": true,
+				"endOfLine": "auto"
 			}
 		]
 	}
