--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "build:dev": "cross-env NODE_ENV=development rbxtsc --verbose",
     "watch:dev": "cross-env NODE_ENV=development rbxtsc -w --verbose",
     "build:rbxmx": "npm run build:luau && rojo build luau/build.project.json -o luau.net.rbxmx",
-    "build:example": "cross-env NODE_ENV=development rbxtsc-dev --type=game -p ./example -i ./include",
-    "watch:example": "cross-env NODE_ENV=development TYPE=TestTS rbxtsc-dev -w --type=game -p ./example -i ./include",
+    "build:example": "cross-env NODE_ENV=development rbxtsc --type=game -p ./example -i ./include",
+    "watch:example": "cross-env NODE_ENV=development TYPE=TestTS rbxtsc -w --type=game -p ./example -i ./include",
     "serve:example": "rojo serve ./example/default.project.json --port 34567",
     "dev:example": "concurrently npm:watch:example npm:serve:example"
   },
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@rbxts/compiler-types": "^1.3.3-types.1",
     "@rbxts/t": "^1.3.5",
-    "@rbxts/types": "^1.0.471",
+    "@rbxts/types": "^1.0.642",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "concurrently": "^6.0.0",
