--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/net",
-  "version": "3.0.3",
+  "version": "3.1.0",
   "description": "",
   "main": "out/init.lua",
   "scripts": {
@@ -32,6 +32,7 @@
   "types": "out/index.d.ts",
   "devDependencies": {
     "@rbxts/compiler-types": "^1.3.3-types.1",
+    "@rbxts/rust-classes": "^0.12.0",
     "@rbxts/t": "^1.3.5",
     "@rbxts/types": "^1.0.471",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
