Add test environment support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
 		"strict": true,
 		"target": "ESNext",
 		"typeRoots": ["node_modules/@rbxts"],
+		"types": ["@rbxts/types/plugin"],
 		"rootDir": "src",
 		"outDir": "out",
 		"removeComments": false,
